--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <link rel="shortcut icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-    <link rel="stylesheet" href="/css/screen.css" media="screen">
-    <link rel="stylesheet" href="/css/print.css" media="print">
+    <link rel="stylesheet" href="/css/app.css">
 
-    <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/jquery-2.0.0.min.js"></script>
     <script type="text/javascript" src="/js/common.js"></script>
 </head>
 <body>
@@ -112,10 +111,6 @@
 
 		</footer>
 	</article>
-
-	<div id="spinner"></div>    
-	<script type="text/javascript" src="/js/libs/spin.min.js"></script>
-	<script type="text/javascript" src="/js/spinner.js"></script>
 
 	<script type="text/javascript">
 
