--- a/src/index.html
+++ b/src/index.html
@@ -17,100 +17,112 @@
 	</head>
 	<body>
 		<article class="container">
-			<header>
+
+			<header style="display: none;">
+
 				<h1>Konstantin Dankov</h1>
-
 				<p>Front End dev with attention to detail &amp; interest in Web and UI design. WordPress tinkerer, irregular blogger, green vimmer, apple fan boy &amp; <em>obviously</em> a Philosopher.</p>
-				<p>
-					<em><a href="mailto:konstantin.dankov@historypin.org">Product Manager</a> @ <a href="http://historypin.org/en/">Historypin</a></em>
-					<br>
-					<em><a href="mailto:koko@rhyndo.com">Building websites</a> @ <a href="http://rhyndo.com">Rhyndo ltd</a></em>
-				</p>
-			</header>
-			<section>
-				<h2>Contact</h2>
-				<ul>
-					<li class="email">
-						<a href="mailto:konstantin.dankov@gmail.com">
-							<span class="label">Personal Mail</span>
-							<span class="value">konstantin.dankov@gmail.com</span>
-						</a>
-					</li>
-					<li class="email">
-						<a href="mailto:koko@rhyndo.com">
-							<span class="label">Work Mail</span>
-							<span class="value">koko@rhyndo.com</span>
-						</a>
-					</li>
-					<li class="skype" style="display: none;">
-						<a href="skype://koki4a">
-							<span class="label">Skype</span>
-							<span class="value">koki4a</span>
-						</a>
-					</li>
-				</ul>
-			</section>
-			<section>
-				<h2>Online Presence</h2>
-				<ul>
-					<li class="blog">
-						<a href="http://tanstaafl.dankov.name">
-							<span class="label">Blog in English</span>
-							<span class="value">http://tanstaafl.dankov.name</span>
-						</a>
-					</li>
-					<li class="blog">
-						<a href="http://thelazyperson.org">
-							<span class="label">Blog in Bulgarian</span>
-							<span class="value">http://thelazyperson.org</span>
-						</a>
-					</li>
-					<li class="twitter">
-						<a href="http://twitter.com/kdankov">
-							<span class="label">Twitter in English</span>
-							<span class="value">@kdankov</span>
-						</a>
-					</li>
-					<li class="twitter">
-						<a href="http://twitter.com/thelazyperson">
-							<span class="label">Twitter in Bulgarian</span>
-							<span class="value">@thelazyperson</span>
-						</a>
-					</li>
-					<li class="flickr">
-						<a href="http://flickr.com/photos/kdankov">
-							<span class="label">Attempts at Photography</span>
-							<span class="value">http://flickr.com/photos/kdankov</span>
-						</a>
-					</li>
-					<li class="lastfm">
-						<a href="http://last.fm/user/koki4a">
-							<span class="label">What I listen to</span>
-							<span class="value">http://last.fm/user/koki4a</span>
-						</a>
-					</li>
-				</ul>
-			</section>
-			<section>
-				<h2>Personal Projects</h2>
-				<ul>
-					<li class="initlab">
-						<a href="http://initlab.org">
-							<span class="label">Hackerspace in Sofia</span>
-							<span class="value">http://initlab.org</span>
-						</a>
-					</li>
-					<li class="zadimeno">
-						<a href="http://zadimeno.com">
-							<span class="label">Hookah &amp; Shisha lovers in Sofia</span>
-							<span class="value">http://zadimeno.com</span>
-						</a>
-					</li>
-				</ul>
-			</section>
-			<footer>
 
-			</footer>
+				<p><a href="http://historypin.org/en/">Product Manager @ Historypin</a></p>
+				<p><a href="http://rhyndo.com">Building websites @ Rhyndo ltd</a></p>
+
+			</header>
+
+			<div class="info">
+
+				<section>
+					<h1>Konstantin Dankov</h1>
+					<p>Front End dev with attention to detail &amp; interest in Web and UI design. WordPress tinkerer, irregular blogger, green vimmer, apple fan boy &amp; <em>obviously</em> a Philosopher.</p>
+
+					<p><a href="http://historypin.org/en/">Product Manager @ Historypin</a></p>
+					<p><a href="http://rhyndo.com">Building websites @ Rhyndo ltd</a></p>
+				</section>
+
+				<section>
+					<h2>Contact</h2>
+					<ul>
+						<li class="email">
+							<a href="mailto:koko@rhyndo.com">
+								<span class="label">Historypin Mail</span>
+								<span class="value">koko@historypin.org</span>
+							</a>
+						</li>
+						<li class="email">
+							<a href="mailto:koko@rhyndo.com">
+								<span class="label">Rhydno Mail</span>
+								<span class="value">koko@rhyndo.com</span>
+							</a>
+						</li>
+						<li class="email">
+							<a href="mailto:konstantin.dankov@gmail.com">
+								<span class="label">Personal Mail</span>
+								<span class="value">konstantin.dankov@gmail.com</span>
+							</a>
+						</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Online Presence</h2>
+					<ul>
+						<li class="blog">
+							<a href="http://tanstaafl.dankov.name">
+								<span class="label">Blog in English</span>
+								<span class="value"><i>http://</i>tanstaafl.dankov.name</span>
+							</a>
+						</li>
+						<li class="blog">
+							<a href="http://thelazyperson.org">
+								<span class="label">Blog in Bulgarian</span>
+								<span class="value"><i>http://</i>thelazyperson.org</span>
+							</a>
+						</li>
+						<li class="twitter">
+							<a href="http://twitter.com/kdankov">
+								<span class="label">Twitter in English</span>
+								<span class="value">@kdankov</span>
+							</a>
+						</li>
+						<li class="twitter">
+							<a href="http://twitter.com/thelazyperson">
+								<span class="label">Twitter in Bulgarian</span>
+								<span class="value">@thelazyperson</span>
+							</a>
+						</li>
+						<li class="flickr">
+							<a href="http://flickr.com/photos/kdankov">
+								<span class="label">Attempts at Photography</span>
+								<span class="value"><i>http://</i>flickr.com/photos/kdankov</span>
+							</a>
+						</li>
+						<li class="lastfm">
+							<a href="http://last.fm/user/koki4a">
+								<span class="label">What I listen to</span>
+								<span class="value"><i>http://</i>last.fm/user/koki4a</span>
+							</a>
+						</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Personal Projects</h2>
+					<ul>
+						<li class="initlab">
+							<a href="http://initlab.org">
+								<span class="label">Hackerspace in Sofia</span>
+								<span class="value"><i>http://</i>initlab.org</span>
+							</a>
+						</li>
+						<li class="zadimeno">
+							<a href="http://zadimeno.com">
+								<span class="label">Hookah &amp; Shisha lovers in Sofia</span>
+								<span class="value"><i>http://</i>zadimeno.com</span>
+							</a>
+						</li>
+					</ul>
+				</section>
+
+			</div>
 		</article>
 
 	</body>
