--- a/src/index.html
+++ b/src/index.html
@@ -20,23 +20,21 @@
 
 			<header>
 				<h1>Konstantin Dankov</h1>
-				<p>Front End Designer, Speaker, Teacher</p>
+				<p>Senior UI/UX Engeneer, Speaker, Teacher, Vim user</p>
 			</header>
 
 			<section class="positions">
 				<ul>
 					<li>
-						<a href="https://rhyndo.com">
-							<span class="jobtitle">Founder and CEO</span>
-							<span class="company">Rhyndo</span>
-							<span class="description">Web Development agency</span>
+						<a href="https://givingforce.com" target="_blank">
+							<span class="jobtitle">Operations Manager</span>
+							<span class="company">GivingForce</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://nuveze.com">
-							<span class="jobtitle">Co-Founder and CEO</span>
-							<span class="company">Nuveze</span>
-							<span class="description">SAAS Platform for Restaurants</span>
+						<a href="https://teachme.bg" target="_blank">
+							<span class="jobtitle">Teacher</span>
+							<span class="company">HTML & CSS Courses @ TeachMe</span>
 						</a>
 					</li>
 				</ul>
@@ -45,15 +43,27 @@
 			<section class="contact">
 				<ul>
 					<li class="email">
+						<a href="mailto:konstantin.dankov@givingforce.com">
+							<span>Work - GivingForce</span>
+							<span>konstantin.dankov@givingforce.com</span>
+						</a>
+					</li>
+					<li class="email">
 						<a href="mailto:konstantin.dankov@gmail.com">
+							<span>Personal</span>
 							<span>konstantin.dankov@gmail.com</span>
-							<span>Drop me a line</span>
 						</a>
 					</li>
 					<li class="twitter">
 						<a href="http://twitter.com/kdankov">
 							<span class="value">@kdankov</span>
-							<span class="label">Twitter in English</span>
+							<span class="label">Twitter</span>
+						</a>
+					</li>
+					<li class="instagram">
+						<a href="http://instagram.com/kdankov">
+							<span class="value">kdankov</span>
+							<span class="label">Instagram</span>
 						</a>
 					</li>
 				</ul>
