--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <section class="contact">
             <ul>
                 <li class="email"><a href="mailto:konstantin.dankov@gmail.com"><span>Personal</span> <span>konstantin.dankov@gmail.com</span></a></li>
-                <li class="email"><a href="mailto:k.dankov@hyperaspect.com"><span>Work</span> <span>konstantin.dankov@gmail.com</span></a></li>
+                <li class="email"><a href="mailto:k.dankov@hyperaspect.com"><span>Work</span> <span>k.dankov@hyperaspect.com</span></a></li>
                 <li class="twitter"><a href="https://twitter.com/kdankov"><span class="value">@kdankov</span> <span class="label">Twitter</span></a></li>
-                <li class="twitter"><a href="https://lazyco.bg"><span class="value">Lazyco.bg</span> <span class="label">Non-work related activities. Primarily in Bulgarian.</span></a></li>
+                <li class="twitter"><a href="https://lazyco.bg"><span class="value">LazyCo.bg</span> <span class="label">Non-work related activities. Primarily in Bulgarian.</span></a></li>
             </ul>
         </section>
     </article>
